Fix horizontal scroll on the gallery page

--- a/src/pages/Gallery/gallery.module.scss
+++ b/src/pages/Gallery/gallery.module.scss
@@ -106,7 +106,7 @@
         }
     
         .picture:nth-child(4) {
-            margin-left: 408px;
+            padding-left: 408px;
             grid-column-start: 2;
             grid-column-end: 2;
             grid-row-start: 1;
